[package]
name = "rustSerialKDPProxy"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
clap = { version = "3.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
